# modular-audio

./: .gitignore  README.md
docs/model/controller-seq/: controller-seq.md
docs/model/dependencies/: dependencies.md
docs/model/display-architecture/: display-architecture.md
docs/model/use-cases/: use-cases-overview.plantuml  use-cases-select.plantuml  use-cases-settings.plantuml  use-cases.plantuml
hardware/controller/: #auto_saved_files#  controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  project.kicad_sym  sym-lib-table
hardware/controller/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
hardware/i2s-muliplexer/: i2s-muliplexer.kicad_pcb  i2s-muliplexer.kicad_pro  i2s-muliplexer.kicad_sch  i2s-muliplexer.sch  i2s-multiplexer.lib  sym-lib-table
hardware/i2s-muliplexer-test/: #auto_saved_files#  i2s-muliplexer-test  i2s-muliplexer-test.kicad_prl  i2s-muliplexer-test.kicad_pro  i2s-muliplexer-test.kicad_sch
hardware/i2s-muliplexer/i2s-multiplexer/: _autosave-i2s-multiplexer.kicad_pcb  i2s-multiplexer-cache.lib  i2s-multiplexer.dcm  i2s-multiplexer.kicad_pcb  i2s-multiplexer.kicad_pcb-bak  i2s-multiplexer.kicad_prl  i2s-multiplexer.kicad_pro  i2s-multiplexer.lib  i2s-multiplexer.net  i2s-multiplexer.pro  i2s-multiplexer.sch  i2s-multiplexer.sch-bak  sym-lib-table
hardware/i2s-multiplexer/: README.md  i2s-muliplexer  i2s-muliplexer.kicad_pro  i2s-muliplexer.kicad_sch  i2s-multiplexer.kicad_sym  sym-lib-table
hardware/power-board/: #auto_saved_files#  power-board.kicad_pcb  power-board.kicad_pro  power-board.kicad_sch
hardware/select-buttons-board/: select-buttons-board.kicad_pro  select-buttons-board.kicad_sch
hardware/select-buttons-board/select-buttons-board/: select-buttons-board.kicad_pro  select-buttons-board.kicad_sch
hardware/source-display-processor/: source-display-processor.kicad_pro  source-display-processor.kicad_sch
hardware/wiring-loom/: project.kicad_sym  project_components.kicad_sym  sym-lib-table  wiring-loom.kicad_pro  wiring-loom.kicad_sch
software/Amplifier-Module/: Amplifier-Module.ino
software/digital-signal-processor/: Cargo.toml  README.md
software/digital-signal-processor/src/: main.rs
software/i2c_scanner/: i2c_scanner.ino
software/i2s-multiplexer-test/src/: main.cpp
software/i2s_tone_gen/: platformio.ini
software/i2s_tone_gen/src/: main.cpp
software/main-controller/: .gitignore  Cargo.toml  README.md  build.rs
software/main-controller/.cargo/: config.toml
software/main-controller/app/: Cargo.toml
software/main-controller/app/src/: main.rs  source_select_driver.rs
software/main-controller/channel/: Cargo.toml
software/main-controller/channel/src/: lib.rs
software/main-controller/cross/: Cargo.toml
software/main-controller/cross/.cargo/: config.toml
software/main-controller/cross/app/: Cargo.toml
software/main-controller/cross/app/src/: main.rs  source_select_driver.rs
software/main-controller/cross/app/src/source_OLD/: source_cd.rs
software/main-controller/i2s-multiplexer/: Cargo.toml
software/main-controller/i2s-multiplexer/src/: lib.rs
software/main-controller/source_select_driver/: Cargo.toml
software/main-controller/source_select_driver/src/: lib.rs
software/main-controller/sources/: Cargo.toml
software/main-controller/sources/src/: lib.rs
software/main-controller/src/: all_sources.rs  channel.rs  error.rs  main.rs  source.rs  source_channel_map.rs  source_select_driver.rs  sources.rs
software/main-controller/src/source/: mod.rs  source_bluetooth.rs  source_wireless_lan.rs
software/main-controller/src/sources/: mod.rs  source.rs  source_bluetooth.rs  source_wireless_lan.rs
software/main-controller/ui/: appwindow.slint  bluetooth.slint  bluetoothscreen.slint  common.slint  moreselectscreen.slint  selectscreen.slint
