[package]
name = "main-controller"
version = "0.1.0"
authors = ["Andrew Doble <andrew.l.doble@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.1"
timer = "0.2.0"         # Need to REVIEW when using embedded

[build-dependencies]
slint-build = "0.2.1"
