[package]
edition = "2021"
name = "main-controller"
version = "0.2.0"
description = """Main controller for the moduler amplifier \
                 - using embassy as real time framework"""

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

# The old version of the emebedded hal is still required for some of the drivers. 
embedded-hal = { version = "0.2.7", features = ["unproven"] }

# This is the newest version of embedded-hal as of the time of writing.
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

static_cell = { version = "1.1", features = ["nightly"] }
pio = "0.2.1"

defmt = "=0.3.2"
defmt-rtt = "0.3"
fixed = "1.23.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.7.15"

# The main controller using the Raspberry PI Pico as processor board
rp-pico = "0.6.0"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"

# For linking
rp2040-boot2 = { version = "0.2.1" }

# Required for RTIC - all removed
#cortex-m-rtic = "1.1.4"
#rp2040-monotonic = "1.2"

# Required for healp allocation so that smart pointers such as Box can be used.
embedded-alloc = "0.5.0"

# The pin expander used for the source display controller
mcp23017 = "1.0.0"

# Time handling traits
fugit = "0.3.6"

# Used to map source to channel
enum-map = "2.5.0"

# The internal libraries used in the modular-audio project 
#source_select_driver = { path = "source_select_driver" }
i2s-multiplexer = { path = "i2s-multiplexer" }

# The embassy crates. Including a lot, but need to check later (using cargo +nightly udeps) 
# which ones need to be removed (TODO)
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.3", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-wiznet = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
